--- a/.github/workflows/upload-file.yml
+++ b/.github/workflows/upload-file.yml
@@ -14,11 +14,11 @@ jobs:
 
     - name: Upload File to Repository
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        ACTIONS_TOKEN: ${{ secrets.ACTIONS_TOKEN }}
       run: |
         echo "Start Uploading File..."
         curl -X PUT \
-          -H "Authorization: token $GITHUB_TOKEN" \
+          -H "Authorization: token $ACTIONS_TOKEN" \
           -H "Content-Type: application/json" \
           -d @file.json \
           https://api.github.com/repos/<REPO_OWNER>/<REPO_NAME>/contents/<TARGET_PATH>/<FILE_NAME>
